# homer1

./: .gitignore  CMakeLists.txt  Makefile  README.md  influxdb_dashboard.json  sdkconfig
components/homer_i2c/: CMakeLists.txt  homer_i2c.cpp  homer_i2c.hpp  i2c.cpp  i2c.hpp
components/homer_sensor/: CMakeLists.txt  bmp180.cpp  bmp180.hpp  homer_sensor.cpp  homer_sensor.hpp  pms5003.cpp  pms5003.hpp  s8.cpp  s8.hpp  sht3x.cpp  sht3x.hpp
components/homer_sensors/: CMakeLists.txt  bmp180.cpp  bmp180.hpp  pms5003.cpp  pms5003.hpp  s8.cpp  s8.hpp  sgp30.cpp  sgp30.hpp  sht3x.cpp  sht3x.hpp
components/homer_util/: CMakeLists.txt  homer_util.cpp  homer_util.hpp  util.cpp  util.hpp
config/: grafana.json  influxdb_dashboard.json  prometheus.yml
config/rpi/: Makefile  docker-compose.yml  undervoltage.sh
config/rpi/conf/: homer1.service  influxdb2_oss_metrics_dashboard.yaml  node_exporter.service
config/rpi/conf/grafana/: grafana.ini
displayer_esp32/: GPIOInterrupt.ino  display.ino
main/: CMakeLists.txt  Kconfig.projbuild  homer1.cpp  homer1.hpp  homer_helper.c  homer_helper.h  homer_wifi.c  my_conf.cpp  my_conf.hpp  my_init.cpp  my_init.hpp  my_s8.cpp  my_s8.hpp  my_util.cpp  my_util.hpp
raspberry/: Makefile  docker-compose.yml  undervoltage.sh
raspberry/conf/: homer1.service  node_exporter.service  prometheus.yml  telegraf.conf
raspberry/dashboards/: homer1_grafana_dashboard.json
